--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   }
 
   .head-1 {
-    @apply text-2xl md:text-3xl lg:text-4xl font-bold tracking-wide;
+    @apply text-2xl font-bold md:text-3xl lg:text-4xl tracking-wide;
   }
 
   .head-2 {
