--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,10 @@
   .head-5 {
     @apply text-base font-semibold tracking-wide capitalize md:text-lg;
   }
+
+  .head-6 {
+    @apply text-sm font-medium tracking-wide capitalize md:text-base;
+  }
 }
 
 @layer base {
